--- a/Kapstondaw/capstone-frontend/scss/layout/_active-report.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_active-report.scss
@@ -1,5 +1,6 @@
 .active-report {
   background-color: rgba($color: #000000, $alpha: 0.25);
+  backdrop-filter: blur(5px);
   border: none;
   display: none;
 
@@ -27,10 +28,10 @@
       border: none;
       border-radius: 1rem;
       width: 100%;
-      p {
-        text-align: end;
-        font-size: 1.2rem;
-        margin: 0;
+      .active-report-close {
+        display: flex;
+        align-items: center;
+        justify-content: end;
       }
 
       .container {
@@ -74,14 +75,13 @@
 
     .confirmation {
       background-color: #fff;
+      border: none;
+      border-radius: 1rem;
       display: none;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      width: 300px;
       align-items: center;
       justify-content: center;
+      padding: 1rem;
 
       .buttons {
         display: flex;
@@ -95,7 +95,7 @@
           font-weight: bold;
         }
 
-        .active-service-request {
+        .active-report-submit {
           background-color: #007236;
           color: #fff;
         }
