--- a/Kapstondaw/capstone-frontend/scss/layout/_active-service.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_active-service.scss
@@ -1,5 +1,6 @@
 .active-service {
   background-color: rgba($color: #000000, $alpha: 0.25);
+  backdrop-filter: blur(5px);
   border: none;
   display: none;
 
@@ -27,10 +28,10 @@
       border: none;
       border-radius: 1rem;
       width: 100%;
-      p {
-        text-align: end;
-        font-size: 1.2rem;
-        margin: 0;
+      .active-service-close {
+        display: flex;
+        align-items: center;
+        justify-content: end;
       }
 
       .container {
