--- a/Kapstondaw/BACKENDMONATO/style4.css
+++ b/Kapstondaw/BACKENDMONATO/style4.css
@@ -1161,8 +1161,14 @@ td {
   flex-wrap: wrap;
 }
 .input-form .bodyInfo .leftInfo .inputFullname {
-  margin-bottom: 10px;
+  display: flex;
 }
+.input-form .bodyInfo .leftInfo .inputFullname .name-cont {
+  display: flex;
+  flex-direction: column;
+  margin-right: 5px;
+}
+
 .input-form .bodyInfo .leftInfo .inputFullname p {
   color: #000;
   font-family: Poppins;
@@ -1180,8 +1186,8 @@ td {
   line-height: normal;
   }
 
-.input-form .bodyInfo .leftInfo .inputFullname input {
-  width: 25%;
+.input-form .bodyInfo .leftInfo .inputFullname .name-cont input {
+  width: 100%;
   height: 28.5px;
   fill: #FFF;
   border-radius: 3px;
@@ -1189,8 +1195,8 @@ td {
   padding-left: 5px;
   border: solid 1px #007236;
 }
-.input-form .bodyInfo .leftInfo .inputFullname .suffix {
-  width: 10%;
+.input-form .bodyInfo .leftInfo .inputFullname .name-cont .suffix {
+  width: 50%;
 }
 .input-form .bodyInfo .leftInfo .inputDob {
   margin-bottom: 10px;
