--- a/Kapstondaw/BACKENDMONATO/style2.css
+++ b/Kapstondaw/BACKENDMONATO/style2.css
@@ -45,11 +45,11 @@
 }
 .left_officials .second_layer {
   display: flex;
-  margin-left: 20px;
+  padding: 10px 0px;
   width: 98%;
   background-color: #FFFFFF;
   height: 65px;
-  margin-top: 25px;
+  margin-top: 15px;
   border-radius: 10px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   flex-direction: row;
