--- a/Kapstondaw/capstone-frontend/scss/layout/_services.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_services.scss
@@ -46,6 +46,7 @@
         }
 
         button {
+          cursor: pointer;
           border: none;
           border-radius: 5rem;
           background-color: #097338;
