--- a/Kapstondaw/capstone-frontend/scss/layout/_active-success.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_active-success.scss
@@ -34,6 +34,7 @@
     }
 
     .close-icon-message {
+      cursor: pointer;
       display: flex;
       align-items: center;
       justify-content: end;
