--- a/Kapstondaw/capstone-frontend/scss/layout/_concerns.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_concerns.scss
@@ -47,6 +47,7 @@
         }
 
         button {
+          cursor: pointer;
           border: none;
           border-radius: 5rem;
           background-color: #097338;
