--- a/Kapstondaw/BACKENDMONATO/scss/_endorsementCertGenerate.scss
+++ b/Kapstondaw/BACKENDMONATO/scss/_endorsementCertGenerate.scss
@@ -4,6 +4,27 @@
   margin-top: 85px;
   margin-left: 75px;
 
+  .backContainer {
+    display: flex;
+    margin-left: 15px;
+    margin-top: 15px;
+    cursor: pointer;
+  }
+  .backContainer img {
+    width: 15px;
+    height: 15px;
+  }
+  .backContainer p {
+    margin-left: 5px;
+    color: #000;
+    font-size: 10px;
+    font-family: Poppins;
+    font-style: italic;
+    font-weight: 500;
+    line-height: normal;
+
+  }
+
   .title-cont {
     height: 50px;
     width: 100%;
