--- a/Kapstondaw/BACKENDMONATO/scss/_idFormGenerate.scss
+++ b/Kapstondaw/BACKENDMONATO/scss/_idFormGenerate.scss
@@ -4,6 +4,26 @@
   margin-top: 85px;
   margin-left: 75px;
 
+  .backContainer {
+    display: flex;
+    margin-left: 15px;
+    margin-top: 15px;
+    cursor: pointer;
+  }
+  .backContainer img {
+    width: 15px;
+    height: 15px;
+  }
+  .backContainer p {
+    margin-left: 5px;
+    color: #000;
+    font-size: 10px;
+    font-family: Poppins;
+    font-style: italic;
+    font-weight: 500;
+    line-height: normal;
+  }
+
   .title-cont {
     height: 50px;
     width: 100%;
@@ -64,22 +84,83 @@
       line-height: normal;
       margin-left: 15px;
     }
-    a {
+    .left-title {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      text-decoration: none;
-      text-align: center;
-      margin-right: 25px;
+      flex-direction: row;
+      
+      button {
+        color: #007236;
+        cursor: pointer;
+        border: 1px solid #007236;
+        border-radius: 20px;
+        padding: 10px 35px; 
+        margin-right: 5px;
+        background: #FFFFFF;
+        display: inline-block;
+        font-family: Poppins;
+        font-size: 14px;
+      }
+      button:hover {
+        background-color: #007236;
+        color: white;
+      }
 
-      color: #007236;
-      width: 105px;
-      height: 39px;
-  
-      border-radius: 20px;
-      border: 1px solid #007236;
-      background: #FFF;
+      a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none;
+        text-align: center;
+        margin-right: 25px;
+        font-family: Poppins;
+        font-size: 14px;
+        color: #007236;
+        padding: 10px 35px; 
+       
+        border-radius: 20px;
+        border: 1px solid #007236;
+        background: #FFF;
+      }
+      a:hover {
+        background-color: #007236;
+        color: white;
+      }
+      
+    label.label input[type="file"] {
+      position: absolute;
+      top: -1000px;
     }
+    label.label input[type="file"] {
+        position: absolute;
+        top: -1000px;
+      }
+      .label {
+        color: #007236;
+        cursor: pointer;
+        border: 1px solid #007236;
+        border-radius: 20px;
+        padding: 10px 15px; 
+        margin-right: 5px;
+        background: #FFFFFF;
+        display: inline-block;
+        font-family: Poppins;
+        font-size: 14px;
+      }
+      .label:hover {
+        background: #007236;
+        color: white;
+      }
+      .label:active {
+        background: #9fa1a0;
+      }
+      .label:invalid + span {
+        color: #000000;
+      }
+      .label:valid + span {
+        color: #ffffff;
+      }
+    }
+   
   }
   .form-container-idForm {
     max-width: 2000px;
