--- a/Kapstondaw/capstone-frontend/scss/global/_global.scss
+++ b/Kapstondaw/capstone-frontend/scss/global/_global.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -11,6 +13,7 @@ html {
 }
 
 body {
+  font-family: "Poppins", sans-serif;
   position: relative;
   margin: 0;
   padding: 0;
