--- a/Kapstondaw/capstone-frontend/scss/styles.css
+++ b/Kapstondaw/capstone-frontend/scss/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -11,6 +12,7 @@ html {
 }
 
 body {
+  font-family: "Poppins", sans-serif;
   position: relative;
   margin: 0;
   padding: 0;
@@ -186,7 +188,7 @@ header ul li:nth-child(5) {
 }
 .subHeader ul {
   display: none;
-  min-width: 500px;
+  min-width: 700px;
 }
 @media (min-width: 375px) {
   .subHeader ul {
@@ -202,6 +204,7 @@ header ul li:nth-child(5) {
   color: #fff;
   list-style: none;
   margin: 0;
+  font-size: 0.8rem;
 }
 .subHeader ul li a {
   color: #fff;
